--- a/process.env
+++ b/process.env
@@ -1,3 +1,4 @@
 EMAIL_USER=adalovelaceabir@gmail.com
 EMAIL_PASS=lwlk sbxw vglu szzu
 CONTACT_EMAIL=adalovelaceabir@gmail.com
+MONGODB_URI=mongodb+srv://adalovelaceabir_db_user:Kjuj5UXEyn901CmS@adalovelaceabir.iyp1rhr.mongodb.net/?retryWrites=true&w=majority&appName=Adalovelaceabir
